time api[update]
