# api/group/time_template/router.go
@@ -2,12 +2,14 @@ package time_template
 
 import (
 	"github.com/gofiber/fiber/v2"
+	group2 "schedule_task_command/api/group"
 	"schedule_task_command/app/dbs"
 	"schedule_task_command/util/logFile"
 )
 
 func RegisterRouter(g group) {
-	o := NewOperate(g.GetDbs())
+	timeS := g.GetScheduleServer().GetTimeServer()
+	o := NewOperate(g.GetDbs(), timeS)
 	log := logFile.NewLogFile("router", "time_template.log")
 	app := g.GetApp()
 
@@ -19,10 +21,11 @@ func RegisterRouter(g group) {
 	tt.Post("/", h.AddTimeTemplate)
 	tt.Patch("/", h.UpdateTimeTemplate)
 	tt.Delete("/", h.DeleteTimeTemplate)
-
+	tt.Post("/checkTime/:id", h.CheckTime)
 }
 
 type group interface {
 	GetApp() fiber.Router
 	GetDbs() dbs.Dbs
+	GetScheduleServer() group2.ScheduleSer
 }
