# docs/swagger.json
@@ -738,6 +738,46 @@
                 }
             }
         },
+        "/api/time_template/checkTime/{id}": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "time_template"
+                ],
+                "summary": "Check time templates",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "time template id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "check time body",
+                        "name": "checkTime",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/time_template.CheckTime"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    }
+                }
+            }
+        },
         "/api/time_template/{id}": {
             "get": {
                 "description": "Get time templates by id",
@@ -1134,7 +1174,7 @@
                     "type": "integer"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_schedule.TimeDatum"
+                    "$ref": "#/definitions/e_time_data.TimeDatum"
                 },
                 "time_data_id": {
                     "type": "integer"
@@ -1170,7 +1210,7 @@
                     "type": "integer"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_schedule.TimeDatumCreate"
+                    "$ref": "#/definitions/e_time_data.TimeDatumCreate"
                 }
             }
         },
@@ -1202,115 +1242,7 @@
                     "type": "integer"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_schedule.TimeDatumUpdate"
-                }
-            }
-        },
-        "e_schedule.TimeDatum": {
-            "type": "object",
-            "properties": {
-                "condition_type": {
-                    "type": "string"
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "end_time": {
-                    "type": "string"
-                },
-                "interval_seconds": {
-                    "type": "integer"
-                },
-                "repeat_type": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "start_time": {
-                    "type": "string"
-                },
-                "t_condition": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                }
-            }
-        },
-        "e_schedule.TimeDatumCreate": {
-            "type": "object",
-            "required": [
-                "end_time",
-                "start_date",
-                "start_time"
-            ],
-            "properties": {
-                "condition_type": {
-                    "type": "string"
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "end_time": {
-                    "type": "string"
-                },
-                "interval_seconds": {
-                    "type": "integer"
-                },
-                "repeat_type": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "start_time": {
-                    "type": "string"
-                },
-                "t_condition": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                }
-            }
-        },
-        "e_schedule.TimeDatumUpdate": {
-            "type": "object",
-            "required": [
-                "end_time",
-                "repeat_type",
-                "start_date",
-                "start_time",
-                "t_condition"
-            ],
-            "properties": {
-                "condition_type": {
-                    "type": "string"
-                },
-                "end_date": {
-                    "type": "string"
-                },
-                "end_time": {
-                    "type": "string"
-                },
-                "interval_seconds": {
-                    "type": "integer"
-                },
-                "repeat_type": {
-                    "type": "string"
-                },
-                "start_date": {
-                    "type": "string"
-                },
-                "start_time": {
-                    "type": "string"
-                },
-                "t_condition": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
+                    "$ref": "#/definitions/e_time_data.TimeDatumUpdate"
                 }
             }
         },
@@ -1498,11 +1430,11 @@
                 }
             }
         },
-        "e_time_template.TimeDatum": {
+        "e_time_data.TimeDatum": {
             "type": "object",
             "properties": {
                 "condition_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "end_date": {
                     "type": "string"
@@ -1514,7 +1446,7 @@
                     "type": "integer"
                 },
                 "repeat_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "start_date": {
                     "type": "string"
@@ -1530,17 +1462,16 @@
                 }
             }
         },
-        "e_time_template.TimeDatumCreate": {
+        "e_time_data.TimeDatumCreate": {
             "type": "object",
             "required": [
                 "end_time",
                 "start_date",
-                "start_time",
-                "t_condition"
+                "start_time"
             ],
             "properties": {
                 "condition_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "end_date": {
                     "type": "string"
@@ -1552,7 +1483,7 @@
                     "type": "integer"
                 },
                 "repeat_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "start_date": {
                     "type": "string"
@@ -1568,7 +1499,7 @@
                 }
             }
         },
-        "e_time_template.TimeDatumUpdate": {
+        "e_time_data.TimeDatumUpdate": {
             "type": "object",
             "required": [
                 "end_time",
@@ -1579,7 +1510,7 @@
             ],
             "properties": {
                 "condition_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "end_date": {
                     "type": "string"
@@ -1591,7 +1522,7 @@
                     "type": "integer"
                 },
                 "repeat_type": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "start_date": {
                     "type": "string"
@@ -1620,7 +1551,7 @@
                     "type": "string"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_time_template.TimeDatum"
+                    "$ref": "#/definitions/e_time_data.TimeDatum"
                 },
                 "updated_at": {
                     "type": "string"
@@ -1638,7 +1569,7 @@
                     "type": "string"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_time_template.TimeDatumCreate"
+                    "$ref": "#/definitions/e_time_data.TimeDatumCreate"
                 }
             }
         },
@@ -1655,7 +1586,7 @@
                     "type": "string"
                 },
                 "time_data": {
-                    "$ref": "#/definitions/e_time_template.TimeDatumUpdate"
+                    "$ref": "#/definitions/e_time_data.TimeDatumUpdate"
                 }
             }
         },
@@ -1682,6 +1613,23 @@
                 "example": {
                     "type": "string",
                     "example": "asdfasdf"
+                }
+            }
+        },
+        "time_template.CheckTime": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "trigger_account": {
+                    "type": "string"
+                },
+                "trigger_from": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         }
